# security-architect-mcp-server

./: .gitignore  ANALYST-ENRICHMENT-COMPLETE.md  ANALYST-EVIDENCE-ENRICHMENT-PLAN.md  AUTOMATION-COMPLETE-SUMMARY.md  BATCH-1-COMPLETION-SUMMARY.md  BATCH-2-PROGRESS-SUMMARY.md  BATCH-4-COMPLETION-SUMMARY.md  BLOG-MCP-ALIGNMENT-ANALYSIS-2025-10-30.md  BLOG-POST-10-UPDATE-RECOMMENDATIONS.md  CONTRIBUTING.md  DECISION-INTERVIEW-FLOW-AUDIT-2025-10-30.md  Dockerfile  ENRICHMENT-COMPLETE-FINAL.md  FULL-MIGRATION-PROGRESS.md  INTEGRATION-SUMMARY.md  LAUNCH-PLAN.md  LICENSE  MIGRATION-COMPLETE-FINAL-SUMMARY.md  PROJECT-BRIEF.md  QUALITY-REVIEW-FINAL.md  README.md  ULTRATHINK-MCP-SERVER-DESIGN.md  VENDOR-EXPANSION-RECOMMENDATIONS.md  add_new_vendors.py  docker-compose.yml  fix_vendor_validation.py  foundational_filter_results.json  pyproject.toml  test_foundational_filters.py
.claude/: BEST-PRACTICES-AUDIT-2025-12-06.md  CLAUDE.md  settings.local.json
data/: .last_sync  INTEGRATION_STATUS.md  LICENSE  decision_state.json  vendor_database.json  vendor_database.json.backup
docs/: AUTOMATION-SETUP.md  BETA-FEEDBACK-TEMPLATE.md  BETA-TESTER-OUTREACH.md  BETA-TESTING-GUIDE.md  DATABRICKS-MCP-CATALOG-INTEGRATION.md  INTEGRATION-NEXT-STEPS.md  INTEGRATION-SCHEMA.md  LITERATURE-REVIEW-UPDATE-RECOMMENDATIONS.md  MCP-HYBRID-DECISION-APPROVED.md  MCP-VS-CLAUDE-SKILLS-ARCHITECTURE-DECISION.md  PHASE1-TESTING-GUIDE.md  QUALITY-REVIEW-FINAL-SESSION-2.md  README.md  SECURITY-AUDIT-2025.md  SESSION-2025-10-23-SESSION-2-VENDOR-EXPANSION.md  SESSION-2025-10-23-SESSION-3-PRODUCTION-DEPLOYMENT.md  SETUP.md  SKILL-DESIGNS.md  SUBSTACK-INTEGRATION.md  USAGE.md  VENDOR_EXPANSION_PLAN.md  VENDOR_SPECIFICATION.md  decision-data-v1.json  decision-data-v2.json  decision-data-v3.json  decision-tree-v2.js  decision-tree.js  index-v1.html  index.html  styles-v1.css  styles-v2.css  vendor_database.json
monitoring/: cloudwatch-alarms.tf  cloudwatch-dashboards.json  setup-monitoring.sh
scripts/: add_10_vendors.py  add_9_vendors.py  add_foundational_capabilities.py  add_phase2_vendors.py  add_volume_context.py  deploy-docker.sh  deploy-serverless.sh  github_metrics_tracker.py  sync_from_literature_review.py  weekly_health_check.py  weekly_vendor_refresh.py
serverless/: lambda_handler.py  serverless.yml
src/: models.py  (+1 more)
(+43 files in other folders)
